[workspace]
members = ["derive"]

[package]
name = "default-constructor"
version = "0.5.0"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/default-constructor"
description = """
Macros for creating pseudo-dsls that constructs structs through
default construction and field conversion.
"""

keywords = ["constructor", "default", "macro"]

[lib]
doctest = false

[dependencies]
default-constructor-macros = { version = "0.5.0", path = "derive" }

[features]
default = ["std"]
std = []
