[package]
name = "default-constructor-macros"
version = "0.4.0"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/default-constructor"
description = """
Macros for default-constructor.
"""

keywords = ["constructor", "default", "macro"]

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.85"
quote = "1.0.36"
